--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
+    "dateformat": "^3.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "sequelize": "^2.0.0-rc1",
+    "sequelize": "3.29.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.4"
   }
