--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
     "moment": "^2.23.0",
     "morgan": "~1.9.0",
+    "pug-cli": "^1.0.0-alpha6",
     "sequelize": "3.29.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.4"
